testsuite/tests/th/T7667a.stderr

T7667a.hs:8:10: error: [GHC-55017]
    • Illegal variable name: ‘False’
      When splicing a TH expression: False
    • In the untyped splice: $(return $ VarE (mkName "False"))
